Issue #3: [CouchDB Conflict Remover] Integrate builds with Travis CI
- #3

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 ---
+dist: focal
 language: python
+git:
+  quiet: true
 python:
-  - 3.9.2
+  - 3.9
 branches:
   only:
     - master
 install:
   - make install
 script:
-  - make build
+  - make lint
 ...
